name:                haskell-scheme
version:             0.1.0.0
synopsis:            A fully-functional Scheme interpreter
description:         Please see README.md
homepage:            https://github.com/prcastro/haskell-scheme
license:             MIT
license-file:        LICENSE
author:              Paulo Castro
maintainer:          p.oliveira.castro@gmail.com
copyright:           2016 Paulo Castro
category:            Programming
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable haskell-scheme
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-scheme
  default-language:    Haskell2010

test-suite haskell-scheme-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-scheme
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-scheme
